--- a/src/App.css
+++ b/src/App.css
@@ -146,6 +146,10 @@ h2 {
     width: 100%;
 }
 
+.options-icon {
+    width: 0.6em;
+}
+
 /*--------------- 4.3.2 Other products ---------------*/
 
 
